css changes to avoid scrollbar in categories

--- a/css/custom.css
+++ b/css/custom.css
@@ -123,12 +123,12 @@ body.modal-open {
 }
 
 #categoriesList {
-	/*max-height: 500px;*/
-	overflow-y: auto;
+	max-height: 500px;
+	overflow-y: hidden;
 }
 
 #entriesContainer {
-	max-height: 810px;
+	/*max-height: 810px;*/
 	min-height: 110px;
 	overflow-y: auto;
 }
